--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <input type="text" class="input" placeholder="Your Phone" /><br />
         <textarea placeholder="Address" class="inputadd"></textarea> <br />
         <button class="send">Send</button>
-        
+
         <br />
         <br />
         <hr />
@@ -175,6 +175,9 @@
         </span>
       </div>
     </div>
-    <script src="//code.tidio.co/vuoisjlemtslquyuv6ncdwpl2habhakw.js" async></script>
+    <script
+      src="//code.tidio.co/vuoisjlemtslquyuv6ncdwpl2habhakw.js"
+      async
+    ></script>
   </body>
 </html>
